[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DigDugPlayer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/DigDugGame.gd" type="Script" id=3]
[ext_resource path="res://Joystick/Joystick.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/MenuButtonHandler.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[node name="DigDug" type="Node2D"]
script = ExtResource( 3 )

[node name="Map" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 300, 300 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Joystick" parent="." instance=ExtResource( 4 )]
margin_left = 147.0
margin_top = 559.093
margin_right = 147.0
margin_bottom = 559.093

[node name="TDButton" type="Button" parent="."]
margin_left = 896.0
margin_top = 16.0
margin_right = 1265.52
margin_bottom = 88.0
text = "Tower Defense Mode"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TDButton" to="TDButton" method="_on_TDButton_pressed"]
