[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/MenuButtonHandler.gd" type="Script" id=2]

[node name="Instructions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.917647, 0.85098, 0.498039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 29.8875
margin_top = 28.1294
margin_right = 127.778
margin_bottom = 100.129
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 481.716
margin_top = 28.1294
margin_right = 689.716
margin_bottom = 94.1294
custom_fonts/font = ExtResource( 1 )
text = "Instructions"
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
