[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Icons/home.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MenuButtonHandler.gd" type="Script" id=2]
[ext_resource path="res://Assets/Icons/exit.png" type="Texture" id=3]
[ext_resource path="res://fonts/kenvector_future_large.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/kenvector_future_thin.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Icons/redo.png" type="Texture" id=6]

[node name="Menu" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.247059, 0.486275, 0.713726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.5
margin_top = -169.0
margin_right = 232.5
margin_bottom = -101.0
custom_fonts/font = ExtResource( 4 )
text = "Game Over!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 102.0
margin_top = 451.0
margin_right = 384.0
margin_bottom = 523.0
custom_fonts/font = ExtResource( 5 )
text = "Main Menu"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainButton" type="Button" parent="."]
margin_left = 512.0
margin_top = 451.0
margin_right = 768.0
margin_bottom = 523.0
custom_fonts/font = ExtResource( 5 )
text = "Try Again"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 896.0
margin_top = 451.0
margin_right = 1043.0
margin_bottom = 523.0
custom_fonts/font = ExtResource( 5 )
text = "Quit Game"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
