[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/main_menu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MenuButtonHandler.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/Neon Laser Horizon.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/menu_button.wav" type="AudioStream" id=4]
[ext_resource path="res://fonts/kenvector_future_main_menu.tres" type="DynamicFont" id=5]

[node name="Menu" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsButton" type="TextureButton" parent="."]
margin_left = 170.0
margin_top = 544.0
margin_right = 314.0
margin_bottom = 616.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsLabel" type="Label" parent="."]
margin_left = 172.0
margin_top = 544.0
margin_right = 314.0
margin_bottom = 616.0
custom_fonts/font = ExtResource( 5 )
text = "Help"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -176.0
margin_right = 62.0
margin_bottom = -104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayLabel" type="Label" parent="."]
margin_left = 560.0
margin_top = 544.0
margin_right = 702.0
margin_bottom = 616.0
custom_fonts/font = ExtResource( 5 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 954.0
margin_top = 544.0
margin_right = 1098.0
margin_bottom = 616.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsLabel" type="Label" parent="."]
margin_left = 959.0
margin_top = 544.0
margin_right = 1101.0
margin_bottom = 616.0
custom_fonts/font = ExtResource( 5 )
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="MenuButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
