[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/MenuButtonHandler.gd" type="Script" id=2]

[node name="Menu" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.6, 0.6, 0.6, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePausedLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -164.0
margin_right = 122.5
margin_bottom = -98.0
custom_fonts/font = ExtResource( 1 )
text = "Game Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 168.0
margin_top = 451.0
margin_right = 387.125
margin_bottom = 523.0
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.5078
margin_top = -269.0
margin_right = 74.5078
margin_bottom = -197.0
custom_fonts/font = ExtResource( 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 888.0
margin_top = 451.0
margin_right = 1025.25
margin_bottom = 523.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
