[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/MenuButtonHandler.gd" type="Script" id=1]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Joystick/Joystick.tscn" type="PackedScene" id=3]

[node name="SiliconMiningMain" type="Node2D"]

[node name="UI" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="UI"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.6, 0.6, 0.6, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenuButton" type="Button" parent="UI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Pause Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TDButton" type="Button" parent="UI"]
margin_left = 896.0
margin_top = 16.0
margin_right = 1265.52
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Tower Defense Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -33.0
margin_right = 275.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Silicon Mining Game Mode Area"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLevelButton" type="Button" parent="UI"]
margin_left = 384.0
margin_top = 512.0
margin_right = 576.0
margin_bottom = 584.0
custom_fonts/font = ExtResource( 2 )
text = "Win Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseLevelButton" type="Button" parent="UI"]
margin_left = 704.0
margin_top = 512.0
margin_right = 904.0
margin_bottom = 584.0
custom_fonts/font = ExtResource( 2 )
text = "Lose Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" parent="UI" instance=ExtResource( 3 )]
margin_top = 393.0
margin_right = -886.0
margin_bottom = -15.0
[connection signal="pressed" from="UI/PauseMenuButton" to="UI" method="_on_PauseMenuButton_pressed"]
[connection signal="pressed" from="UI/TDButton" to="UI" method="_on_TDButton_pressed"]
[connection signal="pressed" from="UI/WinLevelButton" to="UI" method="_on_WinLevelButton_pressed"]
[connection signal="pressed" from="UI/LoseLevelButton" to="UI" method="_on_LoseLevelButton_pressed"]
